--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
         </div>
     </div>
 	<div id="vid" class="video">
-		
-			
 		<div class="video-main"> 
-			<div class="pixo-h1">VIDEO</div>
+			<!-- <div class="pixo-h1">VIDEO</div> -->
 			<video src="./video/farewell_clip.mp4" controls preload="auto" poster="./img/thumbnail.png" width="700px"></video>
 		</div>
 	</div>
@@ -368,7 +366,7 @@ To share again before we perish.
 				 Lots of <i class="fas fa-heart" style="margin-right: 0;"></i> from Team Pixonoids
 			 </div>
 			 <div class="copy">
-				<div class="blackpixo"></div> © Pixonoids 2021 | All Rights Reserved 
+				<div class="blackpixo"></div> © Pixonoids 2021 
 			 </div>
 
 	</div>
